Update the logo , Removed nav bar and merged with header

--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-navbar-visualizer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Hardware Price Tracker</title>
+    <meta name="description" content="Monitor and aggregate real‑time price changes across major eCommerce platforms for electronics—find the best deals and plan your next hardware purchase." />
+    <meta name="author" content="Hardware Price Tracker Team" />
 
-    <meta property="og:title" content="react-navbar-visualizer" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Hardware Price Tracker" />
+<meta property="og:description" content="Track prices, set alerts, compare specs, and discover the best times to buy electronics." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://hardwarepricetracker.com" />
+<meta property="og:image" content="/assets/og-image.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Hardware Price Tracker" />
+<meta name="twitter:description" content="Real‑time electronics price monitoring and smart alerts—never miss a deal again." />
+<meta name="twitter:image" content="/assets/og-image.png" />
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" />
+
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- Application bundle -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
