Enhancement: Update index.html, main.tsx, Hero, ProductCard, and Shop components for improved SEO and performance
This commit enhances the index.html file by adding Open Graph meta tags and a favicon for better SEO and branding. The main.tsx file is updated to register a service worker for improved performance. The Hero and ProductCard components are modified to include width, height, and loading attributes for images, optimizing loading times. Additionally, the Shop component's search input placeholder is simplified for better usability.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hardware Price Tracker</title>
-    <meta name="description" content="Monitor and aggregate real‑time price changes across major eCommerce platforms for electronics—find the best deals and plan your next hardware purchase." />
-    <meta name="author" content="Hardware Price Tracker Team" />
+    <meta name="description" content="Track and compare hardware prices across multiple stores. Find the best deals on electronics and never overpay again." />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Hardware Price Tracker" />
+    <meta property="og:description" content="Track and compare hardware prices across multiple stores. Find the best deals on electronics." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <link rel="preload" href="/lovable-uploads/display.webp" as="image" type="image/webp" />
+    <title>Hardware Price Tracker - Compare Electronics Prices</title>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:title" content="Hardware Price Tracker" />
